# poetry_on_docker

./: .gitignore  Readme.rst  docker-compose.yaml
app/: pyproject.toml
app/project/config/: urls.py
app/project/config/settings/: base.py
app/project/sample_app/: urls.py
docker/app/: Dockerfile  start-server.sh
docker/db/: Dockerfile
docker/etc/: gunicorn.conf
