[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
psycopg2-binary = "^2.8"
gunicorn = "^19.9"
django-extensions = "^2.2"
django-debug-toolbar = "^2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
django-stubs = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
